test/it/code-samples/positive/pages-any-prop-on-container-children-items/pageCode.js
$w("#box1").children.forEach(child => {
  child.nonExistingProp = "something";
});
