test/it/code-samples/negative/public-$w/index.js
$w.onReady(() => {
    console.log("hello world")
})